Fixed: When turning dark mode off, chat would be black. Added: Two tabs in game room :) Fixed: When turning chat highlight off when dark mode is on, chat background would be white.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -658,7 +658,8 @@ textarea .dark {
     background-color: #a09d00;
 }
 
-.dark .chat-window {
+.dark .chat-window,
+.dark .tab-window-full-bottom {
     border: 1px solid #000000;
 }
 
@@ -674,6 +675,16 @@ textarea .dark {
 .dark .date-text {
     background-color: #333333;
     border: 1px solid #222222;
+}
+
+.buttonDark {
+    background-color: #363636;
+    border: 1px solid black;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);   
+}
+.dark #playerHighlightColourButton:hover{
+    border: 1px solid gray;
+
 }
 
 
@@ -775,4 +786,9 @@ textarea .dark {
     position: relative;
     bottom: 5px;
     width: 100%;
+}
+
+
+.displayNoneClass {
+    display: none;
 }
